--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="dist/css/angular-material.min.css">
   <link id="app_main_css" rel="stylesheet" href="dist/css/main.css">
   <link rel="stylesheet" href="dist/css/style.css">
+    <link rel="stylesheet" href="dist/css/infinity.css">
   <link rel="stylesheet" href="dist/css/style_theme.css">
 
   <!-- Include Jquery in the vendor folder -->
@@ -36,6 +37,18 @@
 <base href="/">
 </head>
 <body data-ng-app="app" id="app" ng-controller="NavCtrl as navigationController" class="navigation--small">
+
+<div id="stadium">
+
+<div id="seats">
+
+<div id="feild">
+
+<div id="end-zone-home">
+<h1>HOME TEAM</h1>
+<div id="proActive-logo">
+</div><!-- end proActive-logo -->
+</div><!-- end end-zone-home -->
 
   <div data-ng-controller="ColorSwitchLayoutCtrl"></div>
 
@@ -71,6 +84,19 @@
   <script type="text/javascript" src="./app/views/home/controller/home.js"></script>
   <script type="text/javascript" src="./app/views/home/controller/mainFactory.js"></script>
 
+<div id="end-zone-visitors">
+<h1>AWAY TEAM</h1>
+</div><!-- end end end-zone-vistors-->
+
+
+</div><!-- end feild -->
+
+</div><!-- end seats -->
+
+
+
+
+</div><!-- end of stadium -->
 
 </body>
 </html>
